--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "axios": "^1.8.4",
+    "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-i18n": "^12.0.0-alpha.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
