--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.8.4",
     "lodash": "^4.17.21",
     "pinia": "^3.0.1",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-i18n": "^12.0.0-alpha.2",
     "vue-router": "^4.5.0"
