--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "axios": "^1.8.4",
+    "firebase": "^11.5.0",
     "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "uuid": "^11.1.0",
