--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "uuid": "^11.1.0",
-    "vue": "^3.5.13",
     "vue-i18n": "^12.0.0-alpha.2",
     "vue-router": "^4.5.0"
   },
@@ -32,7 +31,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
-    "@vue/test-utils": "^2.4.0-alpha.2",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.21.0",
     "eslint-plugin-vue": "~10.0.0",
@@ -46,6 +45,7 @@
     "vite-plugin-vue-devtools": "^7.7.2",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.9",
+    "vue": "^3.5.13",
     "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^2.2.8"
   }
