--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/ui": "^3.0.9",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.4.6",
