--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "vitest": "^3.0.9",
     "vue": "^3.5.13",
     "vue-jest": "^5.0.0-alpha.10",
+    "vue-tel-input-vuetify": "^1.5.3",
     "vue-tsc": "^2.2.8"
   }
 }
